
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int u16 ;
struct cfg80211_chan_def {int center_freq1; int width; TYPE_1__* chan; } ;
struct brcmu_d11inf {int (* encchspec ) (struct brcmu_chan*) ;} ;
struct brcmu_chan {int chspec; int band; int sb; int bw; int chnum; } ;
typedef int s32 ;
struct TYPE_2__ {int center_freq; int band; } ;


 int BRCMU_CHAN_BAND_2G ;
 int BRCMU_CHAN_BAND_5G ;
 int BRCMU_CHAN_BW_160 ;
 int BRCMU_CHAN_BW_20 ;
 int BRCMU_CHAN_BW_40 ;
 int BRCMU_CHAN_BW_80 ;
 int BRCMU_CHAN_SB_L ;
 int BRCMU_CHAN_SB_LL ;
 int BRCMU_CHAN_SB_LLL ;
 int BRCMU_CHAN_SB_LLU ;
 int BRCMU_CHAN_SB_LU ;
 int BRCMU_CHAN_SB_LUL ;
 int BRCMU_CHAN_SB_LUU ;
 int BRCMU_CHAN_SB_U ;
 int BRCMU_CHAN_SB_UL ;
 int BRCMU_CHAN_SB_ULL ;
 int BRCMU_CHAN_SB_ULU ;
 int BRCMU_CHAN_SB_UU ;
 int BRCMU_CHAN_SB_UUL ;
 int BRCMU_CHAN_SB_UUU ;
 int TRACE ;
 int WARN_ON (int) ;
 int WARN_ON_ONCE (int) ;
 int brcmf_dbg (int ,char*,int,...) ;
 int ieee80211_frequency_to_channel (int) ;
 int stub1 (struct brcmu_chan*) ;

__attribute__((used)) static u16 chandef_to_chanspec(struct brcmu_d11inf *d11inf,
          struct cfg80211_chan_def *ch)
{
 struct brcmu_chan ch_inf;
 s32 primary_offset;

 brcmf_dbg(TRACE, "chandef: control %d center %d width %d\n",
    ch->chan->center_freq, ch->center_freq1, ch->width);
 ch_inf.chnum = ieee80211_frequency_to_channel(ch->center_freq1);
 primary_offset = ch->chan->center_freq - ch->center_freq1;
 switch (ch->width) {
 case 133:
 case 132:
  ch_inf.bw = BRCMU_CHAN_BW_20;
  WARN_ON(primary_offset != 0);
  break;
 case 131:
  ch_inf.bw = BRCMU_CHAN_BW_40;
  if (primary_offset > 0)
   ch_inf.sb = BRCMU_CHAN_SB_U;
  else
   ch_inf.sb = BRCMU_CHAN_SB_L;
  break;
 case 129:
  ch_inf.bw = BRCMU_CHAN_BW_80;
  if (primary_offset == -30)
   ch_inf.sb = BRCMU_CHAN_SB_LL;
  else if (primary_offset == -10)
   ch_inf.sb = BRCMU_CHAN_SB_LU;
  else if (primary_offset == 10)
   ch_inf.sb = BRCMU_CHAN_SB_UL;
  else
   ch_inf.sb = BRCMU_CHAN_SB_UU;
  break;
 case 134:
  ch_inf.bw = BRCMU_CHAN_BW_160;
  if (primary_offset == -70)
   ch_inf.sb = BRCMU_CHAN_SB_LLL;
  else if (primary_offset == -50)
   ch_inf.sb = BRCMU_CHAN_SB_LLU;
  else if (primary_offset == -30)
   ch_inf.sb = BRCMU_CHAN_SB_LUL;
  else if (primary_offset == -10)
   ch_inf.sb = BRCMU_CHAN_SB_LUU;
  else if (primary_offset == 10)
   ch_inf.sb = BRCMU_CHAN_SB_ULL;
  else if (primary_offset == 30)
   ch_inf.sb = BRCMU_CHAN_SB_ULU;
  else if (primary_offset == 50)
   ch_inf.sb = BRCMU_CHAN_SB_UUL;
  else
   ch_inf.sb = BRCMU_CHAN_SB_UUU;
  break;
 case 128:
 case 130:
 case 135:
 default:
  WARN_ON_ONCE(1);
 }
 switch (ch->chan->band) {
 case 138:
  ch_inf.band = BRCMU_CHAN_BAND_2G;
  break;
 case 137:
  ch_inf.band = BRCMU_CHAN_BAND_5G;
  break;
 case 136:
 default:
  WARN_ON_ONCE(1);
 }
 d11inf->encchspec(&ch_inf);

 brcmf_dbg(TRACE, "chanspec: 0x%x\n", ch_inf.chspec);
 return ch_inf.chspec;
}
